--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,7 +1,6 @@
 .contactComponent{
     background-color:rgb(217, 217, 217);
-    height:550px;
-    margin-top: 95px;
+    height:98vh;
     display:flex;
 }
 
@@ -10,18 +9,18 @@
     height: 450px;
     width:600px;
     border-radius: 20px;
-    margin-left: 600px;
+   
     text-align: start;
     padding: 10px;
     padding-left: 100px;
-    position: fixed;
-    /* margin-top: 50px; */
+    margin-left: 400px;
+    margin-top: 50px;
     
 }
 img{
     height: 30px;
     width: 30px;
-    
+    margin: 0;
 }
 .address{
     display: flex;
@@ -38,13 +37,22 @@ img{
     max-width: 500px;
 }
 .contact{
-    width: 550px;
-    max-width: 550px;
 
+    max-width: 550px;
+    margin: 10px auto;
     border-radius: 20px;
     background-color: rgb(124, 17, 17);
-   
-    
+    padding: 50px 70px;
+    height: 400px;
+    position: absolute;
+    margin-left: 100px;
+    margin-top: 70px;
+}
+.imgContainer{
+    max-width: 200px;
+    max-height: 100px;
+    width: 20px;
+    height: 20;
 }
 
 .submit{
