--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -1,31 +1,38 @@
+.signupComponent{
+    background-color: rgb(217, 217, 217);
+    height:100vh;
+    padding-top: 45px;
+}
 .sign {
     display: block;
-    margin-bottom: 8px;
+    /* margin-bottom: 8px; */
     justify-content: start;
     }
 
-input {
-    width: 100%;
+.inps {
+    width: 300px;
     padding: 8px;
     margin-bottom: 16px;
     box-sizing: border-box;
     }
 
-.signupComponent{
+.signup{
     background-color: #f7f2f2;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
     width: 1000px;
     margin-left: 150px;
+    
 }
 .form{
     display:flex;
     justify-content: center;
+    /* margin: 5px; */
     
 }
 
-h5{
+.hfs{
     font-size: 18px;
     font-weight: bold;
     color: #7a0101;
@@ -37,6 +44,6 @@ h5{
 }
 
 .delivery{
-    margin-left: 10px;
+    margin-left: 40px;
 }
     
