--- a/src/css/order/order.css
+++ b/src/css/order/order.css
@@ -42,7 +42,11 @@
 }
 
 .cartContainer{
-    background-color: bisque;
+  
+    display: grid;
+    grid-template-rows:auto auto ;
+    max-height: 100vh;
+    height: 100vh;
 }
 
 .cartItemContainer{
@@ -93,5 +97,81 @@
     margin: 10px auto;
     padding: 10px;
     cursor: pointer;
+ 
+}
+
+.itemSection{
+    max-height: 900px;
+    overflow: auto;
+}
+
+.checkoutbtn{
+    cursor: pointer;
+    background-color: rgb(230, 70, 30);
+    padding: 10px;
+    border-radius: 8px;
+    margin: 10px auto;
+    max-width: 200px;
+    color: white;
+
+}
+
+
+
+
+.paymentForm{
+    max-width: 600px;
+    padding: 10px;
+    margin: 10px auto;
+}
+.paymentForm h1{
+    text-align: center;
+    padding: 10px;
+}
+
+.expMonth{
+    width: 50px;
+
+    padding: 5px;
+  
+    border-radius: 8px;
+    border: 1px thick lightblue;
+}
+.expYear{
+    width: 100px;
+    margin-left: 10px;
+    padding: 5px;
+    border-radius: 8px;
+    border:1px thick lightblue;
+}
+.expFields{
+
+    display: flex;
+
+}
+.cvCode{
+    width: 60px;
+}
+.paymentTable table{
+    max-width: 600px;
+    margin: 10px auto;
+}
+.paymentTable td{
+    padding: 10px;
+}
+.paymentTable h3{
+    text-align: center;
+    color: gray;
+}
+.payBtn{
    
+    max-width: 600px;
+    margin: 10px auto;
+    width: 150px;
+    padding: 10px;
+    margin-left: 190px;
+    background-color: #222b56;
+    border: 0px;
+    border-radius: 5px;
+    color: white;
 }
